--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>TO Do List</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>First Git!!</h1>
+    <p class="line"></p>
+    <section class="container">
+
+        <h1>TO DO List</h1>
+        <div class="input-area">
+            <input type="text" id="todo">
+            <button id="todoPlus"><i class="material-icons">edit</i></button>
+        </div>
+
+        <section class="task-list-container">
+            <div id="tab-all">All</div>
+            <div id="tad-not-Done">notDone</div>
+            <div id="Done">Done</div>
+        </section>
+        <div id="task-board">
+            <div class="task-done task-done">
+                <span>test</span>
+                <div class="btn-box">
+                    <button></button>
+                </div>
+            </div>
+        </div>
+
+
+
+    </section>
+
+
+
+
+
+    <script src="main.js"></script>
 </body>
+
 </html>
