--- a/index.html
+++ b/index.html
@@ -6,34 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO Do List</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <p class="line"></p>
+
     <section class="container">
 
         <h1>TO DO List</h1>
         <div class="input-area">
-            <input type="text" id="todo">
-            <button id="todoPlus"><i class="material-icons">edit</i></button>
+            <input type="text" class="task-input" />
+
+            <button class="button-add" type="button"><i class="material-icons">edit</i></button>
+
         </div>
 
-        <section class="task-list-container">
-            <div id="tab-all">All</div>
-            <div id="tad-not-Done">notDone</div>
-            <div id="Done">Done</div>
-        </section>
-        <div id="task-board">
-            <div class="task-done task-done">
-                <span>test</span>
-                <div class="btn-box">
-                    <button></button>
-                </div>
+        <section class="task-area">
+            <div class="task-tabs">
+                <div id="tab-underline" class=" hidden"></div>
+                <div id="tab-all">All</div>
+                <div id="tad-not-Done">notDone</div>
+                <div id="Done">Done</div>
             </div>
-        </div>
+
+            <div id="task-board">
+
+
+            </div>
+
+        </section>
 
 
 
@@ -42,7 +46,7 @@
 
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 
