--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 
     </section>
 
+    <footer>
+        Copyright (C) 2022 김연수 all rights reserved. Copyright for 김연수 all rights reserved.
+
+    </footer>
+
 
 
 
