--- a/index.html
+++ b/index.html
@@ -1,58 +1,67 @@
 <!DOCTYPE html>
 <html lang="ko">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TO Do List</title>
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/style.css" />
 
-<body>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+  </head>
 
+  <body>
     <section class="container">
+      <h1>TO DO List</h1>
+      <div class="input-area">
+        <input type="text" class="task-input" />
 
-        <h1>TO DO List</h1>
-        <div class="input-area">
-            <input type="text" class="task-input" />
+        <button class="button-add" type="button"><i class="material-icons">edit</i></button>
+      </div>
 
-            <button class="button-add" type="button"><i class="material-icons">edit</i></button>
-
+      <section class="task-area">
+        <div class="task-tabs">
+          <!-- <div id="tab-underline" class="hidden"></div> -->
+          <div id="tab-all" class="active" >All</div>
+          <div id="tad-not-Done"  >notDone</div>
+          <div id="Done">Done</div>
         </div>
 
-        <section class="task-area">
-            <div class="task-tabs">
-                <div id="tab-underline" class=" hidden"></div>
-                <div id="tab-all">All</div>
-                <div id="tad-not-Done">notDone</div>
-                <div id="Done">Done</div>
-            </div>
+<script>
+var target = $('.task-tabs > div');
 
-            <div id="task-board">
+target.click(function () {
+
+    if(!$(this).hasClass('active')){
+
+        $(this).addClass('active');
+        target.not($(this)).removeClass('active');
+
+    }else {
+     
+    }
+
+   
+});
+
+</script>
 
 
-            </div>
-
-        </section>
 
 
-
+        <div id="task-board"></div>
+      </section>
     </section>
 
-    <footer>
-        Copyright (C) 2022 김연수 all rights reserved. Copyright for 김연수 all rights reserved.
-
-    </footer>
-
-
-
+    <footer>Copyright (C) 2022 김연수 all rights reserved. Copyright for 김연수 all rights reserved.</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
-</body>
 
+    <script src="main.js"></script>
+
+
+  </body>
 </html>
